--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@ body {
     padding: 0;
 
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
 
@@ -490,7 +491,7 @@ nav {
 
 .Years {
     color: #CDA274;
-   font-size: 40px;
+    font-size: 40px;
 }
 
 
@@ -501,6 +502,7 @@ nav {
     padding: 40px 20px;
 
 }
+
 .articles-section h2 {
     font-size: 2em;
     margin-bottom: 10px;
@@ -638,6 +640,7 @@ nav {
     transition: background-color 0.3s ease;
     transition: all 0.5s ease-in-out;
 }
+
 .cta-button:hover {
     transform: scale(1.1);
     background-color: #a3775e;
@@ -724,7 +727,7 @@ nav {
     color: #555;
 }
 
-                           
+
 
 
 
@@ -756,6 +759,7 @@ nav {
     .work-item {
         max-width: 20%;
     }
+
     .projects-container {
         flex-direction: column;
         align-items: center;
@@ -832,18 +836,20 @@ nav {
     }
 }
 
-@media (max-width:640px) {
+@media (max-width:670px) {
     .banner-text {
-        font-size: 0px;
-width: 20%;
+        font-size: 10px;
+        width: 20%;
         top: 2%;
+        opacity: 0;
     }
+
     .banner-home-button {
         padding: 5px 10px;
         font-size: 0.8rem;
         opacity: 0;
-        }
-    
+    }
+
 
     .work-item {
         max-width: 55%;
